envoy-proxy/envoy.yaml
static_resources:
  listeners:
  - name: https
    address:
      socket_address: { address: 0.0.0.0, port_value: 443 }

    filter_chains:
    - tls_context:
        common_tls_context:
          tls_certificates:
            - certificate_chain:
                filename: "/pem"
              private_key:
                filename: "/key"
      filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_https
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
                - "example.com.tw"
              route:
              - match:
                  prefix: "/"
                route:
                  cluster: targetCluster
          http_filters:
            - name: envoy.router
              typed_config: {}
  clusters:
  - name: targetCluster
    connect_timeout: 0.25s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    tls_context:
      common_tls_context:
    hosts: [
      { socket_address: { address: 1.2.3.4, port_value: 8443 }},
      { socket_address: { address: 5.6.7.8, port_value: 8443 }}
    ]

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 10000
